// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoLocationViewer renders an image, map, location description and disabled buttons if photo location is not suggested 1`] = `
<div
  id="main"
>
  <section>
    <img
      alt="Selected"
      src="path"
    />
    <MapArea
      photo={
        Object {
          "location": Object {
            "Existing": Object {
              "latitude": 52,
              "longitude": 36.2,
            },
          },
          "path": "",
          "src": "path",
        }
      }
    />
  </section>
  <footer>
    <div>
      Existing location
    </div>
    <div>
      <button
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Apply
      </button>
      <button
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Discard
      </button>
    </div>
  </footer>
</div>
`;

exports[`PhotoLocationViewer renders an image, map, location description and enabled buttons if photo location is suggested 1`] = `
<div
  id="main"
>
  <section>
    <img
      alt="Selected"
      src="path"
    />
    <MapArea
      photo={
        Object {
          "location": Object {
            "Suggested": Array [
              Object {
                "latitude": 52,
                "longitude": 36.2,
              },
              Object {
                "meters": 5,
                "seconds": 10,
              },
            ],
          },
          "path": "",
          "src": "path",
        }
      }
    />
  </section>
  <footer>
    <div>
      Suggested location: accuracy is 5 meters and 10 seconds
    </div>
    <div>
      <button
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Apply
      </button>
      <button
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Discard
      </button>
    </div>
  </footer>
</div>
`;

exports[`PhotoLocationViewer renders an image, map, text and disabled buttons if photo has no location 1`] = `
<div
  id="main"
>
  <section>
    <img
      alt="Selected"
      src="path"
    />
    <MapArea
      photo={
        Object {
          "path": "",
          "src": "path",
        }
      }
    />
  </section>
  <footer>
    <div>
      No location
    </div>
    <div>
      <button
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Apply
      </button>
      <button
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Discard
      </button>
    </div>
  </footer>
</div>
`;

exports[`PhotoLocationViewer renders text and disabled buttons if photo is undefined 1`] = `
<div
  id="main"
>
  <section>
    No photo selected.
  </section>
  <footer>
    <div />
    <div>
      <button
        disabled={true}
        type="button"
      >
        Apply
      </button>
      <button
        disabled={true}
        type="button"
      >
        Discard
      </button>
    </div>
  </footer>
</div>
`;
